--- a/codes_for_creating_treemap.ipynb
+++ b/codes_for_creating_treemap.ipynb
@@ -42,8 +42,8 @@
     "\n",
     "        OPTIONAL{?measure bk:commodity ?commodity}.\n",
     "        OPTIONAL{?measure bk:quantity ?quantity}.\n",
-    "        OPTIONAL{?measure bk:unit ?unit}.\n",
-    "        }\"\"\")\n",
+    "        OPTIONAL{?measure bk:unit ?unit}.}\n",
+    "        \"\"\")\n",
     "\n",
     "    transactionID_check = 'test'\n",
     "    business_partner = ''\n",
